# DocuRAG

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: installation.rst
sample_templates/generic/: config_template.yaml
src/llmsearch/: api.py  config.py  embeddings.py  process.py  ranking.py  utils.py  webapp.py
tests/: test_api.py
