[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "setuptools_scm_azure_pipelines>=0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pyllmsearch"
description = "LLM Powered Advanced RAG Application"
# dynamic = ["dependencies", "version"]
dynamic = ["version"]
keywords = ["llm", "rag", "retrieval-augemented-generation","large-language-models",  "local", "splade", "hyde", "reranking", "chroma", "openai"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain-community>=0.4.1",
    "langchain>=1.2.4",
    "langchain-huggingface>=1.2.0",
    "langchain-chroma>=1.1.0",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "click>=8.3.1",
    "openai>=2.15.0",
    "streamlit>=1.53.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "gmft==0.2.1",
    "pypdf2>=3.0.1",
    "pydantic>=2.12.5",
    "instructorembedding>=1.0.1",
    "unstructured>=0.18.27",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "langchain-openai>=1.1.7",
    "python-docx>=1.2.0",
    "pymupdf>=1.26.7",
    "termcolor>=3.3.0",
    "fastapi-mcp>=0.4.0",
    "scipy>=1.15.3",
    "sentence-transformers>=5.2.0",
]

[project.optional-dependencies]

dev = [
    "black",
    "pytest",
    "pytest-cov",
    "ruff",
    "autodoc_pydantic",
    "sphinx",
    "sphinx-markdown-builder",
    "sphinx_rtd_theme"
]

azureparser = [
"azure-ai-documentintelligence==1.0.0b3",
"azure-identity==1.17.1"
]

googleparser = [
    "google-generativeai>=0.8.5",
  ]

[project.urls]
Homepage = "https://github.com/snexus/llm-search"
Documentation = "https://llm-search.readthedocs.io/en/latest/"

[tool.setuptools_scm]
write_to = "src/llmsearch/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}

[tool.flake8]
docstring-convention = "all"
ignore = [
  "D107",
  "D212",
  "E501",
  "W503",
  "W605",
  "D203",
  "D100",
  "D400",
  "D415",
  "D104",
  "D203",
  "D213",
  "D401",
  "D406",
  "D417",
]
exclude = [ "venv" ]
max-line-length = 119

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 119
src = ["src"]

[project.scripts]
llmsearch = 'llmsearch.cli:main_cli'
llmsearchapi = 'llmsearch.api:main'

